# sage-numerical-interactive-mip

./: .readthedocs.yaml  README.md  README.rst  THANKS.md  THANKS.rst  condarc.yml  environment-python2.yml  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yml  dist.yml
docs/source/: conf.py  index.rst
sage_numerical_interactive_mip/: __init__.py  clean_dictionary.py  interactive_milp_problem.py
sage_numerical_interactive_mip/_vendor/: interactive_simplex_method.py
sage_numerical_interactive_mip/backends/: abstract_backend_dictionary.py  coin_backend_dictionary.py  glpk_backend_dictionary.py
