[metadata]
name = sage_numerical_interactive_mip
version = 0.1
description = Interactive mixed integer linear programming solver
long_description = file: README.md
license = GNU General Public License (GPL) v2 or later
author = Peijun Xiao, Matthias Koeppe
author_email = mkoeppe@math.ucdavis.edu
url = https://github.com/mkoeppe/sage-numerical-interactive-mip
keywords =
    milp
    linear-programming
    optimization

[options]
packages =
    sage_numerical_interactive_mip
